# Gatherly

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
db/migrations/: 001_init.sql
docs/: adr.md  api-contract.md  er-diagram.md  event-status-model.md  non-functional-requirements.md  notification-outbox.md  openapi.yaml  requirements.md  sequence-diagram.md  use-cases.md
src/: drogon_main.cpp
src/controllers/: api_controller.cpp  api_controller.h
src/db/: postgres_store.cpp  postgres_store.h
src/http/: http_types.h
src/models/: models.cpp  models.h
src/services/: gatherly_service.cpp  gatherly_service.h
src/utils/: auth.cpp  auth.h  json.cpp  json.h
static/: app.js  index.html  styles.css
tests/: domain_tests.cpp
